--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+processResources.dependsOn('copySecret')
+
+
+tasks.register('copySecret', Copy) {
+	from './tick3t-back-submodule'
+	include "application*.yaml"  // 복사할 파일들
+	into 'src/main/resources'  // 복사 위치
+}
