[fix] jenkins submodule branch for 'main'

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tick3t-back-submodule"]
 	path = tick3t-back-submodule
-	url = https://github.com/ThreeHyun/tick3t-back-submodule.git
+	url = https://github.com/ThreeHyun/tick3t-back-submodule
+    branch = main
